--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -24,9 +24,12 @@
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_38FFDB053347533836672451-if00
 restart_method: command     
 
-[mcu extra_mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_33FF6B064746373225250457-if00
-restart_method: command
+# [mcu extra_mcu]
+# serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_33FF6B064746373225250457-if00
+# restart_method: command
+
+[mcu nhk]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_4E363334320E6F13-if00
 
 [force_move]
 enable_force_move: True
@@ -353,19 +356,25 @@ stealthchop_threshold: 999999
 #######################################
 
 [extruder]
-step_pin: extra_mcu:PA8   
-dir_pin: !extra_mcu:PB8    
-enable_pin:!extra_mcu: PB11   
+step_pin: nhk:gpio23
+dir_pin: nhk:gpio24
+enable_pin: !nhk:gpio25
+heater_pin: nhk:gpio9
+sensor_pin: nhk:gpio29
+pullup_resistor: 2200
+# step_pin: extra_mcu:PA8   
+# dir_pin: !extra_mcu:PB8    
+# enable_pin:!extra_mcu: PB11   
 rotation_distance: 6.5 
 microsteps: 16                
 full_steps_per_rotation: 200 
 nozzle_diameter: 0.400        
 filament_diameter: 1.75  
 max_extrude_only_distance: 150     
-heater_pin:extra_mcu:PB9  
-sensor_type:my_thermistor_e  
-pullup_resistor: 11500
-sensor_pin: extra_mcu:PA5  
+# heater_pin:extra_mcu:PB9  
+sensor_type: ATC Semitec 104NT-4-R025H42G                                   #my_thermistor_e  
+# pullup_resistor: 11500
+# sensor_pin: extra_mcu:PA5  
 min_temp: 0                  
 max_temp: 305                 
 max_power: 1.0                
@@ -377,21 +386,27 @@ min_extrude_temp: 0
 pressure_advance: 0.025       
 pressure_advance_smooth_time: 0.035
 
-[thermistor my_thermistor_e]
-temperature1:25
-resistance1:110000
-temperature2:100
-resistance2:7008
-temperature3:220
-resistance3:435
+# [thermistor my_thermistor_e]
+# temperature1:25
+# resistance1:110000
+# temperature2:100
+# resistance2:7008
+# temperature3:220
+# resistance3:435
 
 [tmc2209 extruder]
-uart_pin: extra_mcu:PB10  
-interpolate: True             
+
+sense_resistor: 0.100
+uart_pin: nhk:gpio0
+tx_pin: nhk:gpio1
+interpolate: false
+
+# uart_pin: extra_mcu:PB10  
+# interpolate: True             
 run_current: 0.8           
 # hold_current: 0.8             
-uart_address:3
-sense_resistor: 0.150          
+# uart_address:3
+# sense_resistor: 0.150          
 
 [verify_heater extruder]      
 max_error: 120                
@@ -404,7 +419,8 @@ heating_gain: 2
 #################################
 
 [probe]
-pin: ^extra_mcu:PB6    
+pin: nhk:gpio10
+# pin: ^extra_mcu:PB6    
 x_offset:    0                                   #-16.8                   #-17                  
 y_offset:   23                                   #8.7                    #10             
 # z_offset : 0
@@ -467,12 +483,13 @@ heating_gain: 2
 #                   Fans
 ##################################################
 
-[fan_generic fan0] # back model cooling fan
-pin: extra_mcu:PA7
-max_power: 1.0
+# [fan_generic fan0] # back model cooling fan
+# pin: extra_mcu:PA7
+# max_power: 1.0
 
 [fan_generic fan1] # front model cooling fan
-pin: extra_mcu:PB1
+pin: nhk:gpio6
+# pin: extra_mcu:PB1
 max_power: 1.0
 
 [fan_generic fan3] # exhaust fan
@@ -496,8 +513,9 @@ pid_Ki: 5.0     ;0.2
 pid_Kd: 0.5     ;0.1
 pid_deriv_time: 2.0
 
-[heater_fan hotend_fan]      
-pin: extra_mcu:PA6   
+[heater_fan hotend_fan]
+pin: nhk:gpio5
+# pin: extra_mcu:PA6   
 max_power: 1.0               
 kick_start_time: 0.5         
 heater: extruder             
@@ -506,14 +524,14 @@ heater_temp: 45
 # tachometer_ppr: 1
 # tachometer_poll_interval: 0.0013
 
-[controller_fan extra_controller_fan]
-pin: extra_mcu:PB0  
-fan_speed: 1.0                     #0.5
-idle_timeout: 180
-idle_speed: 1.0
-kick_start_time: 0.5
-# heater_temp: 45
-heater: extruder
+# [controller_fan extra_controller_fan]
+# pin: extra_mcu:PB0  
+# fan_speed: 1.0                     #0.5
+# idle_timeout: 180
+# idle_speed: 1.0
+# kick_start_time: 0.5
+# # heater_temp: 45
+# heater: extruder
 
 # [fan_generic fan4] # exhaust fan
 # pin: extra_mcu:PB0
