--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -45,7 +45,12 @@ timeout: 3600
 filename =/home/sovol/printer_data/config/saved_variables.cfg
 
 [adxl345]
-cs_pin:extra_mcu:PB12
+# cs_pin:extra_mcu:PB12
+[adxl345]
+cs_pin: nhk:gpio27
+spi_software_sclk_pin: nhk:gpio18
+spi_software_mosi_pin: nhk:gpio20
+spi_software_miso_pin: nhk:gpio19
 
 [exclude_object]
 
